--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
         "laravel-mix": "^1.0"
     },
     "dependencies": {
-        "@fullcalendar/core": "^5.0.0",
-        "@fullcalendar/daygrid": "^5.0.1",
-        "@fullcalendar/interaction": "^5.0.0",
-        "@fullcalendar/list": "^5.0.0",
-        "@fullcalendar/timegrid": "^5.0.1",
-        "@fullcalendar/vue": "^5.0.0",
+        "@fullcalendar/core": "^5.10.0",
+        "@fullcalendar/daygrid": "^5.10.0",
+        "@fullcalendar/interaction": "^5.10.0",
+        "@fullcalendar/list": "^5.10.0",
+        "@fullcalendar/moment-timezone": "^5.10.0",
+        "@fullcalendar/timegrid": "^5.10.0",
+        "@fullcalendar/vue": "^5.10.0",
+        "moment": "^2.29.1",
+        "moment-timezone": "^0.5.33",
         "vue": "^2.5.0"
     }
 }
