--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     },
     "devDependencies": {
         "cross-env": "^5.0.0",
-        "laravel-mix": "^1.0"
+        "laravel-mix": "^1.0",
+        "vue-quill-editor": "^3.0.6"
     },
     "dependencies": {
         "@fullcalendar/core": "^5.10.0",
